<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ROMControl</string>
    <string name="rom_control">ROMControl</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="category_general">General</string>
    <string name="category_statusbar">Statusbar</string>
    <string name="category_about_aokp">About</string>
    <string name="category_hardware_keys">Hardware keys</string>
    <string name="category_lockscreen">Lockscreen</string>
    <string name="category_installer">Installer</string>
    <string name="category_toggles">Toggles</string>
    <string name="category_navring">Navigation ring</string>
    <string name="category_navbar">Navigation bar</string>
    <string name="category_sound">Sound</string>
    <string name="category_power_menu">Power menu </string>
    <string name="category_ribbons">Ribbons</string>
    <string name="category_animations">Animations</string>
    <string name="category_led">LED</string>
    <string name="category_auto_immersive">Auto Immersive</string>
    <string name="category_headsup">Heads up</string>
    <string name="menu_show_drawer_icon">Show in app drawer</string>
    <plurals name="multichoice_at_least">
        <item quantity="one">Please select at least <xliff:g id="number">%d</xliff:g> item.</item>
        <item quantity="other">Please select at least <xliff:g id="number">%d</xliff:g> items.</item>
    </plurals>
    <plurals name="multichoice_at_most">
        <item quantity="one">Please select at most <xliff:g id="number">%d</xliff:g> item.</item>
        <item quantity="other">Please select at most <xliff:g id="number">%d</xliff:g> items.</item>
    </plurals>
    <string name="devs">The Team</string>
    <string name="vu" translatable="false">Vanilla Unicorn Project</string>
    <string name="vu_website_title">VanillaUnicorn website</string>
    <string name="vu_website_summary">www.vanilla-roms.com - Find all newest releases here</string>
    <string name="vu_review_title">Changelog</string>
    <string name="vu_review_summary">View the changelog of the new releases</string>
    <string name="vu_irc_title">Join us on G+</string>
    <string name="vu_irc_summary">VanillaUnicorn on g+</string>
    <string name="about_vu">About VanillaUnicorn</string>
    <string name="about_vu_summary">@null</string>
    <string name="donate_vu" translatable="false">http://forum.xda-developers.com/donatetome.php?u=4583359</string>
    <string name="github_vu" translatable="false">https://github.com/VanillaUnicorn</string>
    <string name="donate_and" translatable="false">http://forum.xda-developers.com/donatetome.php?u=4583359</string>
    <string name="github_and" translatable="false">https://github.com/VlikeBanana</string>
    <string name="donate_jesus" translatable="false">http://forum.xda-developers.com/donatetome.php?u=4620435</string>
    <string name="github_jesus" translatable="false">https://github.com/PartimusPrime</string>
    <string name="github_chintan" translatable="false">https://github.com/Chintan1998</string>
    <string name="donate_azn" translatable="false">http://forum.xda-developers.com/donatetome.php?u=2607869</string>
    <string name="github_azn" translatable="false">https://github.com/aznrice</string>
    <string name="donate_jep" translatable="false">jeppefoldager@gmail.com</string>
    <string name="github_jep" translatable="false">https://plus.google.com/u/0/+JeppeFoldager/posts</string>
    <string name="donate_rus" translatable="false">http://forum.xda-developers.com/donatetome.php?u=4337046</string>
    <string name="github_rus" translatable="false">https://github.com/rush25</string>
    <string name="github_akellar" translatable="false">https://github.com/akellar</string>
    <string name="github_bajee11" translatable="false">https://github.com/Bajee11</string>
    <string name="github_bmc08gt" translatable="false">https://github.com/BMc08GT</string>
    <string name="github_birdman" translatable="false">https://github.com/mrbirdman</string>
    <string name="github_bytecodeme" translatable="false">https://github.com/BytecodeMe</string>
    <string name="github_championswimmer" translatable="false">https://github.com/championswimmer</string>
    <string name="github_DAGr8" translatable="false">https://github.com/DAGr8</string>
    <string name="github_dhacker29" translatable="false">https://github.com/dhacker29</string>
    <string name="github_graffixnyc" translatable="false">https://github.com/graffixnyc</string>
    <string name="github_hashcode" translatable="false">https://github.com/Hashcode</string>
    <string name="github_willdeberry" translatable="false">https://github.com/willdeberry</string>
    <string name="github_jbirdvegas" translatable="false">https://github.com/JBirdVegas</string>
    <string name="github_k900" translatable="false">https://github.com/K900</string>
    <string name="github_kecinzer" translatable="false">https://github.com/kecinzer</string>
    <string name="github_khasmek" translatable="false">https://github.com/KhasMek</string>
    <string name="github_kwes" translatable="false">https://github.com/kwes1020</string>
    <string name="github_marclandis" translatable="false">https://github.com/MarcLandis</string>
    <string name="github_rohan32" translatable="false">https://github.com/rohanmathur</string>
    <string name="github_roman" translatable="false">https://github.com/romanbb</string>
    <string name="github_protekk" translatable="false">https://github.com/ProTekk</string>
    <string name="github_qnhoang81" translatable="false">https://github.com/qnhoang81</string>
    <string name="github_scar45" translatable="false">https://github.com/scar45</string>
    <string name="github_sethyx" translatable="false">https://github.com/sethyx</string>
    <string name="github_sixstringsg" translatable="false">https://github.com/sixstringsg</string>
    <string name="github_stevespear" translatable="false">https://github.com/Stevespear426</string>
    <string name="github_tdm" translatable="false">https://github.com/tdm</string>
    <string name="github_whitehawk" translatable="false">https://github.com/Whitehawkx</string>
    <string name="github_xoom" translatable="false">https://github.com/xoomdev</string>
    <string name="github_zaph" translatable="false">https://github.com/Zaphod-Beeblebrox</string>
    <string name="url_vu" translatable="false">http://vanilla-roms.com//</string>
    <string name="url_vu_gerrit" translatable="false">http://vanilla-roms.com/?page_id=64</string>
    <string name="url_vu_irc" translatable="false">https://plus.google.com/communities/113421451898131433024</string>
    <string name="android_open_kang_project" translatable="false">VanillaUnicorn</string>
    <string name="kanglings">The Team</string>
    <string name="battery_status_icon_title">Status icon</string>
    <string name="battery_bar_percent">Battery bar &amp; percent</string>
    <string name="battery_bar">Battery bar</string>
    <string name="battery_circle">Battery circle</string>
    <string name="battery_circle_percent">Battery circle &amp; percent</string>
    <string name="mgerrit_changelog_title">mGerrit: Dynamic ChangeLog</string>
    <string name="mgerrit_changelog_summary">Interactive changelog pulled live from our Gerrit instance</string>
    <string name="dialog_color_picker">Color picker</string>
    <string name="press_color_to_apply">Press on color to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint" translatable="false">#FF000000</string>
    <string name="set">Set</string>
    <string name="default_color">Default</string>
    <string name="time_0_seconds_off">Off</string>
    <string name="time_0_2_seconds">.2 seconds</string>
    <string name="time_0_5_seconds">.5 seconds</string>
    <string name="time_1_second">1 second</string>
    <string name="time_1_5_seconds">1.5 seconds</string>
    <string name="time_2_seconds">2 seconds</string>
    <string name="time_2_5_seconds">2.5 seconds</string>
    <string name="time_3_seconds">3 seconds</string>
    <string name="time_3_5_seconds">3.5 seconds</string>
    <string name="time_4_seconds">4 seconds</string>
    <string name="time_4_5_seconds">4.5 seconds</string>
    <string name="time_5_seconds">5 seconds</string>
    <string name="time_5_5_seconds">5.5 seconds</string>
    <string name="time_6_seconds">6 seconds</string>
    <string name="time_7_seconds">7 seconds</string>
    <string name="time_8_seconds">8 seconds</string>
    <string name="time_9_seconds">9 seconds</string>
    <string name="time_10_seconds">10 seconds</string>
    <string name="size_42_dp_default">42 dp (default)</string>
    <string name="size_36_dp">36 dp</string>
    <string name="size_30_dp">30 dp</string>
    <string name="size_24_dp">24 dp</string>
    <string name="size_48_dp_default">48 dp (default)</string>
    <string name="size_44_dp">44 dp</string>
    <string name="size_40_dp">40 dp</string>
    <string name="size_42_dp">42 dp</string>
    <string name="use_custom_app_title">Use custom application</string>
    <string name="use_custom_app_summary">Use custom application instead of the recent applications dialog</string>
    <string name="select_custom_app_title">Select custom application</string>
    <string name="group_applications">Applications</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="center">Centered</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="wakeup_when_plugged_unplugged_title">Wake up on charger</string>
    <string name="wakeup_when_plugged_unplugged_summary">Wake up device if a charger is plugged in or unplugged</string>
    <string name="ram_bar_title">Recents RAM bar</string>
    <string name="ram_bar_summary">Shows RAM usage in the recent apps window</string>
    <string name="title_hardware_keys_home_long_press">Home - long press</string>
    <string name="title_hardware_keys_home_double_tap">Home - double tap</string>
    <string name="title_hardware_keys_back_long_press">Back - long press</string>
    <string name="title_hardware_keys_menu">Menu</string>
    <string name="title_hardware_keys_menu_long_press">Menu - long press</string>
    <string name="title_hardware_keys_search">Search</string>
    <string name="title_hardware_keys_search_long_press">Search - long press</string>
    <string name="title_hardware_keys_switch_app">Recents</string>
    <string name="title_hardware_keys_switch_app_long_press">Recents - long press</string>
    <string name="title_hardware_keys_camera">Camera</string>
    <string name="title_setting_enable_custom_hardware_keys">Customize hardware keys</string>
    <string name="summary_setting_enable_custom_hardware_keys">Enable to allow custom actions for the hardware keys to be set.</string>
    <string name="setting_key_home_long_press_action_nothing">Nothing</string>
    <string name="setting_key_home_long_press_action_menu">Menu</string>
    <string name="setting_key_home_long_press_action_appswitch">App-switch</string>
    <string name="setting_key_home_long_press_action_search">Search</string>
    <string name="setting_key_home_long_press_action_voicesearch">Voice search</string>
    <string name="setting_key_home_long_press_action_inappsearch">In-app search</string>
    <string name="setting_key_home_long_press_action_killapp">Kill app</string>
    <string name="category_advanced">Advanced</string>
    <string name="title_hardware_keys_volume_keys_double_tap">Volume smash rotation</string>
</resources>