<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:aokp="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView">

    <LinearLayout
            android:id="@+id/crew"
            style="@style/settingsFragmentStyle">
            
            
        <com.aokp.romcontrol.widgets.DeveloperPreference
                android:title="Andreas Daniel Fried"
                aokp:nameDev="Andreas Daniel Fried"
                aokp:githubLink="@string/github_and"
                aokp:twitterHandle="root_ad"
                aokp:emailDev="rootagnex@gmail.com"
                aokp:donateLink="@string/donate_and"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
                
        <com.aokp.romcontrol.widgets.DeveloperPreference
                android:title="Jeppe Foldager"
                aokp:nameDev="Jeppe Foldager"
                aokp:githubLink="@string/github_jep"
                aokp:twitterHandle="jeppefoldager"
                aokp:emailDev="blackbearblanc@gmail.com"
                aokp:donateLink="@string/donate_jep"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <com.aokp.romcontrol.widgets.DeveloperPreference
                android:title="Jesus Partida"
                aokp:nameDev="Jesus Partida"
                aokp:githubLink="@string/github_jesus"
                aokp:twitterHandle="partimusprime"
                aokp:emailDev="partimus.prime@gmail.com"
                aokp:donateLink="@string/donate_jesus"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
                
        <com.aokp.romcontrol.widgets.DeveloperPreference
                android:title="Chintan Shah"
                aokp:nameDev="Chintan Shah"
                aokp:githubLink="@string/github_chintan"
                aokp:twitterHandle="Chintan1998"
                aokp:emailDev="cgintan1998@gmail.com"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
                
        <com.aokp.romcontrol.widgets.DeveloperPreference
                android:title="Rushabh Kothari"
                aokp:nameDev="Rushabh Kothari"
                aokp:githubLink="@string/github_rus"
                aokp:twitterHandle="rushabhk95"
                aokp:emailDev="rushabhk95@gmail.com"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
               

    </LinearLayout>
</ScrollView>
